--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -1,27 +1,48 @@
-.carousel-container {
+.carousel__container {
   width: 100%;
+  height: 50vh;
+  position: relative;
+}
+.carousel__slide {
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   position: relative;
 }
-.carousel-item {
+.carousel__item {
   position: absolute;
   inset: 0;
   overflow: hidden;
   transition: transform var(--transition-normal) ease-in-out;
 }
-.carousel-prev,
-.carousel-next {
-  background: var(--background-color-secondary);
+.carousel__nav {
   position: absolute;
+  z-index: 10;
+  box-shadow: var(--shadow-base);
+}
+.carousel__nav.btn {
+  background: var(--background-color-secondary);
   top: 50%;
   transform: translateY(-50%);
   padding: 0.75rem;
   border-radius: 100%;
-  z-index: 10;
 }
-.carousel-prev {
+.carousel__nav.prev {
   left: 1rem;
 }
-.carousel-next {
+.carousel__nav.next {
   right: 1rem;
+}
+.carousel__nav.dot {
+  width: 0.5rem;
+  height: 0.5rem;
+  bottom: 1rem;
+  left: 50%;
+  border-radius: 100%;
+  background: var(--text-color);
+  transform: translateX(-50%);
+  opacity: 0.5;
+}
+.carousel__nav.dot.active {
+  opacity: 1;
 }
