--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -24,7 +24,7 @@
   background: var(--background-color-secondary);
   top: 50%;
   transform: translateY(-50%);
-  padding: 0.75rem;
+  padding: 0.5em;
   border-radius: 100%;
 }
 .carousel__nav.prev {
@@ -41,8 +41,4 @@
   border-radius: 100%;
   background: var(--text-color);
   transform: translateX(-50%);
-  opacity: 0.5;
-}
-.carousel__nav.dot.active {
-  opacity: 1;
-}
+} 
