--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -1,7 +1,15 @@
 .carousel__container {
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   position: relative;
+  min-height: 400px;
+}
+
+@media (max-width: 768px) {
+  .carousel__container {
+    height: 75vh;
+    min-height: 300px;
+  }
 }
 .carousel__slide {
   width: 100%;
